stlab-modules/stlab-view-dsl/src/main/java/it/unifi/ing/stlab/view/dsl/VistaParser.java
// $ANTLR 3.5.2 /Users/fulvio/Desktop/Vista.g/Vista.g 2018-11-07 12:40:22

package it.unifi.ing.stlab.view.dsl;

import it.unifi.ing.stlab.view.model.Viewer;
import it.unifi.ing.stlab.view.model.links.SubViewer;
import it.unifi.ing.stlab.view.model.links.Tab;
import it.unifi.ing.stlab.view.model.links.TypeSelector;
import it.unifi.ing.stlab.view.model.widgets.ViewerContainer;
import it.unifi.ing.stlab.view.model.widgets.ViewerInput;
import it.unifi.ing.stlab.view.model.widgets.ViewerOutput;
import it.unifi.ing.stlab.view.model.widgets.container.Box;
import it.unifi.ing.stlab.view.model.widgets.container.FactPanel;
import it.unifi.ing.stlab.view.model.widgets.container.ConditionalPanel;
import it.unifi.ing.stlab.view.model.widgets.container.Grid;
import it.unifi.ing.stlab.view.model.widgets.container.Report;
import it.unifi.ing.stlab.view.model.widgets.container.PanelOrientation;
import it.unifi.ing.stlab.view.model.widgets.container.TabbedPanel;
import it.unifi.ing.stlab.view.model.widgets.container.Paragraph;
import it.unifi.ing.stlab.view.model.widgets.input.Combo;
import it.unifi.ing.stlab.view.model.widgets.input.InputList;
import it.unifi.ing.stlab.view.model.widgets.input.InputText;
import it.unifi.ing.stlab.view.model.widgets.input.InputTemporal;
import it.unifi.ing.stlab.view.model.widgets.input.Suggestion;
import it.unifi.ing.stlab.view.model.widgets.input.TextArea;
import it.unifi.ing.stlab.view.model.widgets.input.FileUpload;
import it.unifi.ing.stlab.view.model.widgets.output.Label;
import it.unifi.ing.stlab.view.model.widgets.output.OutputField;
import it.unifi.ing.stlab.view.model.widgets.output.OutputImage;
import it.unifi.ing.stlab.view.model.widgets.output.OutputList;
import it.unifi.ing.stlab.view.model.widgets.output.OutputMeasurementUnit;
import it.unifi.ing.stlab.view.model.widgets.output.OutputPath;
import it.unifi.ing.stlab.view.model.widgets.output.OutputType;
import it.unifi.ing.stlab.view.model.widgets.output.OutputValue;
import it.unifi.ing.stlab.view.model.widgets.output.OutputLink;
import it.unifi.ing.stlab.view.model.widgets.ViewerCustom;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class VistaParser extends BaseVistaParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "FIELD", "ILLEGAL", "NAME", "NUMBER", 
		"WHITESPACE", "','", "'.'", "':'", "';'", "'Agenda'", "'Appointment'", 
		"'Patient'", "'User'", "'and'", "'box'", "'clear'", "'clear-multi'", "'collapse'", 
		"'combo'", "'conditionalPanel'", "'custom'", "'factPanel'", "'fileUpload'", 
		"'grid'", "'horizontal'", "'inputList'", "'inputTemporal'", "'inputText'", 
		"'label'", "'length='", "'or'", "'out'", "'outputImage'", "'outputLink'", 
		"'outputList'", "'outputMeasurementUnit'", "'outputPath'", "'outputType'", 
		"'outputValue'", "'paragraph'", "'query'", "'readonly'", "'report'", "'required'", 
		"'spaced_horizontal'", "'suggestion'", "'tabbedPanel'", "'textArea'", 
		"'vertical'", "'view'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int FIELD=4;
	public static final int ILLEGAL=5;
	public static final int NAME=6;
	public static final int NUMBER=7;
	public static final int WHITESPACE=8;

	// delegates
	public BaseVistaParser[] getDelegates() {
		return new BaseVistaParser[] {};
	}

	// delegators


	public VistaParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public VistaParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return VistaParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/fulvio/Desktop/Vista.g/Vista.g"; }


	  public Viewer parse() throws VistaParserException {
	    Viewer result = null;
	    try {
	      result = rule();
	    } catch (IllegalArgumentException e) {
	      extendedReportError( e );
	    } catch (RecognitionException re) {
	        reportError(re);
	        recover(input,re);
	    }

	    if ( isOk() ) {
	      return result;
	    } else {
	      throw new VistaParserException( errorReport() );
	    }
	  }



	// $ANTLR start "rule"
	// /Users/fulvio/Desktop/Vista.g/Vista.g:92:1: rule returns [Viewer ret] : (n= NAME )? v= viewComponent EOF ;
	public final Viewer rule() throws RecognitionException {
		Viewer ret = null;


		Token n=null;
		Viewer v =null;

		try {
			// /Users/fulvio/Desktop/Vista.g/Vista.g:93:3: ( (n= NAME )? v= viewComponent EOF )
			// /Users/fulvio/Desktop/Vista.g/Vista.g:94:5: (n= NAME )? v= viewComponent EOF
			{
			// /Users/fulvio/Desktop/Vista.g/Vista.g:94:5: (n= NAME )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==NAME) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:94:6: n= NAME
					{
					n=(Token)match(input,NAME,FOLLOW_NAME_in_rule81); 
					 setContext(n.getText()); 
					}
					break;

			}

			pushFollow(FOLLOW_viewComponent_in_rule93);
			v=viewComponent();
			state._fsp--;


			      ret = v;
			      clearStack();
			      assignType( ret );
			    
			match(input,EOF,FOLLOW_EOF_in_rule105); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return ret;
	}
	// $ANTLR end "rule"



	// $ANTLR start "viewComponent"
	// /Users/fulvio/Desktop/Vista.g/Vista.g:104:1: viewComponent returns [Viewer ret] : (r1= inputComponent |r2= outputComponent |r3= containerComponent |r4= view |r5= custom ) ;
	public final Viewer viewComponent() throws RecognitionException {
		Viewer ret = null;


		ViewerInput r1 =null;
		ViewerOutput r2 =null;
		ViewerContainer r3 =null;
		Viewer r4 =null;
		ViewerCustom r5 =null;

		try {
			// /Users/fulvio/Desktop/Vista.g/Vista.g:105:3: ( (r1= inputComponent |r2= outputComponent |r3= containerComponent |r4= view |r5= custom ) )
			// /Users/fulvio/Desktop/Vista.g/Vista.g:105:5: (r1= inputComponent |r2= outputComponent |r3= containerComponent |r4= view |r5= custom )
			{
			// /Users/fulvio/Desktop/Vista.g/Vista.g:105:5: (r1= inputComponent |r2= outputComponent |r3= containerComponent |r4= view |r5= custom )
			int alt2=5;
			switch ( input.LA(1) ) {
			case 22:
			case 26:
			case 29:
			case 30:
			case 31:
			case 49:
			case 51:
				{
				alt2=1;
				}
				break;
			case 32:
			case 35:
			case 36:
			case 37:
			case 38:
			case 39:
			case 40:
			case 41:
			case 42:
				{
				alt2=2;
				}
				break;
			case 18:
			case 23:
			case 25:
			case 27:
			case 43:
			case 46:
			case 50:
				{
				alt2=3;
				}
				break;
			case 53:
				{
				alt2=4;
				}
				break;
			case 24:
				{
				alt2=5;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:105:7: r1= inputComponent
					{
					pushFollow(FOLLOW_inputComponent_in_viewComponent124);
					r1=inputComponent();
					state._fsp--;

					 ret = r1;
					}
					break;
				case 2 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:106:7: r2= outputComponent
					{
					pushFollow(FOLLOW_outputComponent_in_viewComponent136);
					r2=outputComponent();
					state._fsp--;

					 ret = r2; 
					}
					break;
				case 3 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:107:7: r3= containerComponent
					{
					pushFollow(FOLLOW_containerComponent_in_viewComponent148);
					r3=containerComponent();
					state._fsp--;

					 ret = r3; 
					}
					break;
				case 4 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:108:7: r4= view
					{
					pushFollow(FOLLOW_view_in_viewComponent160);
					r4=view();
					state._fsp--;

					 ret = r4; 
					}
					break;
				case 5 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:109:7: r5= custom
					{
					pushFollow(FOLLOW_custom_in_viewComponent172);
					r5=custom();
					state._fsp--;

					 ret = r5; 
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return ret;
	}
	// $ANTLR end "viewComponent"



	// $ANTLR start "inputComponent"
	// /Users/fulvio/Desktop/Vista.g/Vista.g:111:1: inputComponent returns [ViewerInput ret] : (r1= inputText |r2= textArea |r3= combo |r4= suggestion |r5= inputList |r6= inputTemporal |r7= fileUpload ) ;
	public final ViewerInput inputComponent() throws RecognitionException {
		ViewerInput ret = null;


		InputText r1 =null;
		TextArea r2 =null;
		Combo r3 =null;
		Suggestion r4 =null;
		InputList r5 =null;
		InputTemporal r6 =null;
		FileUpload r7 =null;

		try {
			// /Users/fulvio/Desktop/Vista.g/Vista.g:112:3: ( (r1= inputText |r2= textArea |r3= combo |r4= suggestion |r5= inputList |r6= inputTemporal |r7= fileUpload ) )
			// /Users/fulvio/Desktop/Vista.g/Vista.g:112:5: (r1= inputText |r2= textArea |r3= combo |r4= suggestion |r5= inputList |r6= inputTemporal |r7= fileUpload )
			{
			// /Users/fulvio/Desktop/Vista.g/Vista.g:112:5: (r1= inputText |r2= textArea |r3= combo |r4= suggestion |r5= inputList |r6= inputTemporal |r7= fileUpload )
			int alt3=7;
			switch ( input.LA(1) ) {
			case 31:
				{
				alt3=1;
				}
				break;
			case 51:
				{
				alt3=2;
				}
				break;
			case 22:
				{
				alt3=3;
				}
				break;
			case 49:
				{
				alt3=4;
				}
				break;
			case 29:
				{
				alt3=5;
				}
				break;
			case 30:
				{
				alt3=6;
				}
				break;
			case 26:
				{
				alt3=7;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:112:7: r1= inputText
					{
					pushFollow(FOLLOW_inputText_in_inputComponent193);
					r1=inputText();
					state._fsp--;

					 ret = r1;
					}
					break;
				case 2 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:113:7: r2= textArea
					{
					pushFollow(FOLLOW_textArea_in_inputComponent205);
					r2=textArea();
					state._fsp--;

					 ret = r2; 
					}
					break;
				case 3 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:114:7: r3= combo
					{
					pushFollow(FOLLOW_combo_in_inputComponent217);
					r3=combo();
					state._fsp--;

					 ret = r3; 
					}
					break;
				case 4 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:115:7: r4= suggestion
					{
					pushFollow(FOLLOW_suggestion_in_inputComponent229);
					r4=suggestion();
					state._fsp--;

					 ret = r4; 
					}
					break;
				case 5 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:116:7: r5= inputList
					{
					pushFollow(FOLLOW_inputList_in_inputComponent241);
					r5=inputList();
					state._fsp--;

					 ret = r5; 
					}
					break;
				case 6 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:117:7: r6= inputTemporal
					{
					pushFollow(FOLLOW_inputTemporal_in_inputComponent253);
					r6=inputTemporal();
					state._fsp--;

					 ret = r6; 
					}
					break;
				case 7 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:118:7: r7= fileUpload
					{
					pushFollow(FOLLOW_fileUpload_in_inputComponent265);
					r7=fileUpload();
					state._fsp--;

					 ret = r7; 
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return ret;
	}
	// $ANTLR end "inputComponent"



	// $ANTLR start "outputComponent"
	// /Users/fulvio/Desktop/Vista.g/Vista.g:120:1: outputComponent returns [ViewerOutput ret] : (r1= label |r2= outputType |r3= outputValue |r4= outputMeasurementUnit |r5= outputPath |r6= outputList |r7= outputField |r8= outputImage |r9= outputLink ) ;
	public final ViewerOutput outputComponent() throws RecognitionException {
		ViewerOutput ret = null;


		Label r1 =null;
		OutputType r2 =null;
		OutputValue r3 =null;
		OutputMeasurementUnit r4 =null;
		OutputPath r5 =null;
		OutputList r6 =null;
		OutputField r7 =null;
		OutputImage r8 =null;
		OutputLink r9 =null;

		try {
			// /Users/fulvio/Desktop/Vista.g/Vista.g:121:3: ( (r1= label |r2= outputType |r3= outputValue |r4= outputMeasurementUnit |r5= outputPath |r6= outputList |r7= outputField |r8= outputImage |r9= outputLink ) )
			// /Users/fulvio/Desktop/Vista.g/Vista.g:121:5: (r1= label |r2= outputType |r3= outputValue |r4= outputMeasurementUnit |r5= outputPath |r6= outputList |r7= outputField |r8= outputImage |r9= outputLink )
			{
			// /Users/fulvio/Desktop/Vista.g/Vista.g:121:5: (r1= label |r2= outputType |r3= outputValue |r4= outputMeasurementUnit |r5= outputPath |r6= outputList |r7= outputField |r8= outputImage |r9= outputLink )
			int alt4=9;
			switch ( input.LA(1) ) {
			case 32:
				{
				alt4=1;
				}
				break;
			case 41:
				{
				alt4=2;
				}
				break;
			case 42:
				{
				alt4=3;
				}
				break;
			case 39:
				{
				alt4=4;
				}
				break;
			case 40:
				{
				alt4=5;
				}
				break;
			case 38:
				{
				alt4=6;
				}
				break;
			case 35:
				{
				alt4=7;
				}
				break;
			case 36:
				{
				alt4=8;
				}
				break;
			case 37:
				{
				alt4=9;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:121:7: r1= label
					{
					pushFollow(FOLLOW_label_in_outputComponent286);
					r1=label();
					state._fsp--;

					 ret = r1;
					}
					break;
				case 2 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:122:7: r2= outputType
					{
					pushFollow(FOLLOW_outputType_in_outputComponent298);
					r2=outputType();
					state._fsp--;

					 ret = r2; 
					}
					break;
				case 3 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:123:7: r3= outputValue
					{
					pushFollow(FOLLOW_outputValue_in_outputComponent310);
					r3=outputValue();
					state._fsp--;

					 ret = r3; 
					}
					break;
				case 4 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:124:7: r4= outputMeasurementUnit
					{
					pushFollow(FOLLOW_outputMeasurementUnit_in_outputComponent322);
					r4=outputMeasurementUnit();
					state._fsp--;

					 ret = r4; 
					}
					break;
				case 5 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:125:7: r5= outputPath
					{
					pushFollow(FOLLOW_outputPath_in_outputComponent334);
					r5=outputPath();
					state._fsp--;

					 ret = r5; 
					}
					break;
				case 6 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:126:7: r6= outputList
					{
					pushFollow(FOLLOW_outputList_in_outputComponent346);
					r6=outputList();
					state._fsp--;

					 ret = r6; 
					}
					break;
				case 7 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:127:7: r7= outputField
					{
					pushFollow(FOLLOW_outputField_in_outputComponent359);
					r7=outputField();
					state._fsp--;

					 ret = r7; 
					}
					break;
				case 8 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:128:7: r8= outputImage
					{
					pushFollow(FOLLOW_outputImage_in_outputComponent371);
					r8=outputImage();
					state._fsp--;

					 ret = r8; 
					}
					break;
				case 9 :
					// /Users/fulvio/Desktop/Vista.g/Vista.g:129:7: r9= outputLink
					{
					pushFollow(FOLLOW_outputLink_in_outputComponent383);
					r9=outputLink();
					state._fsp--;

					 ret = r9; 
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return ret;
	}
	// $ANTLR end "outputComponent"



	// $ANTLR start "containerComponent"
	// /Users/fulvio/Desktop/Vista.g/Vista.g:132:1: containerComponent returns [ViewerContainer ret] : (r1= grid |r2= box |r3= conditionalPanel |r4= tabbedPanel |r5= report |r6= factPanel |r7= paragraph ) ;
	public final ViewerContainer containerComponent() throws RecognitionException {
		ViewerContainer ret = null;


		Grid r1 =null;
		Box r2 =null;
		ConditionalPanel r3 =null;
		TabbedPanel r4 =null;
		Report r5 =null;
		FactPanel r6 =null;
		Paragraph r7 =null;
